--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -487,4 +487,24 @@ img{
         right: 24%;
     }
 }
-
+.button {
+    background-color: #006de9;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    
+  }
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 445%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
